# cabr2_webapp

./: README.md  package.json
src-tauri/: Cargo.toml
src-tauri/cabr2_config/: Cargo.toml
src-tauri/cabr2_config/src/: lib.rs
src-tauri/cabr2_load_save/: Cargo.toml
src-tauri/cabr2_load_save/src/: lib.rs
src-tauri/cabr2_logger/: Cargo.toml
src-tauri/cabr2_logger/src/: lib.rs
src-tauri/cabr2_search/: Cargo.toml
src-tauri/cabr2_search/src/: error.rs  lib.rs
src-tauri/cabr2_search/src/gestis/: mod.rs
src-tauri/cabr2_types/: Cargo.toml
src-tauri/src/: main.rs
src/app/: app.component.html  app.component.ts  app.module.ts
src/app/@core/services/config/: config.service.ts
src/app/@core/services/i18n/: i18n.service.ts
src/app/@core/services/loadSave/: loadSave.service.ts
src/app/@core/services/provider/: provider.service.ts
src/app/@core/services/search/: search.service.ts
src/app/@core/services/substances/: substances.service.ts
src/app/@core/services/tauri/: tauri.service.ts
src/app/@core/utils/: logger.ts
src/app/consent/: consent.component.html  consent.component.ts
src/app/progress-dialog/: progress-dialog.component.ts
src/environments/: environment.prod.ts  environment.ts
translations/: de_by.json  ru_ru.json
