[package]
name = "cabr2_server"
version = "0.1.0"
authors = [
  "Epsilon_02 <epsilon_02@mailbox.org>",
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>"
]
license = "GPLv3+"
repository = "https://github.com/Calciumdibromid/CaBr2/"
default-run = "cabr2_server"
edition = "2018"

[dependencies]
cabr2_config = { path = "./cabr2_config/" }
cabr2_load_save = { path = "./cabr2_load_save/" }
cabr2_logger = { path = "./cabr2_logger/" }
cabr2_search = { path = "./cabr2_search/" }
log = "0.4.14"

[features]
portable = [ "cabr2_config/portable" ]
default = [ "portable" ]

[[bin]]
name = "cabr2_server"
path = "src/main.rs"

[workspace]
members = [
  "cabr2_types",
  "cabr2_config",
  "cabr2_load_save",
  "cabr2_logger",
  "cabr2_search"
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
